name:                fix-4shared
version:             0.1.0.0
synopsis:            Fix 4shared directory structure for git-annex
description:
    4shared's WebDAV implementation doesn't properly support the move operation,
    which causes all keys to be stuck in the tmp directory when added by
    git-annex. This program loops over the keys and moves them to the right
    place using 4shared's API.
homepage:            https://github.com/mat8913/fix-4shared#readme
bug-reports:         https://github.com/mat8913/fix-4shared/issues
license:             GPL-3
license-file:        LICENSE
author:              Matthew Harm Bekkema
maintainer:          mbekkema97@gmail.com
copyright:           2018 Matthew Harm Bekkema
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 8.0.0 && <= 8.2.2

executable fix-4shared
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base               >= 4.9     && < 4.11
                     , aeson              >= 0.7     && < 1.3
                     , authenticate-oauth >= 1.6     && < 1.7
                     , base16-bytestring  >= 0.1     && < 0.2
                     , bytestring         >= 0.10    && < 0.11
                     , conduit            >= 1.2     && < 1.3
                     , cryptohash-md5     >= 0.11    && < 0.12
                     , http-client        >= 0.4.30  && < 0.6
                     , http-client-tls    >= 0.2.4   && < 0.4
                     , http-types         >= 0.11    && < 0.12
                     , text               >= 1.2     && < 1.3
                     , mtl                >= 2.2.1   && < 2.3
                     , yaml               >= 0.8.4   && < 0.9
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       TemplateHaskell
                       RecordWildCards
                       FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/mat8913/fix-4shared
